[metadata]
description-file = README.md

[nosetests]
tests=test.TestSuite
cover-package=bin

# Erase previously collected coverage statistics before run
cover-erase=TRUE
# Produce XML coverage information
cover-xml=TRUE
# Produce HTML coverage information
cover-html=TRUE
# Include all python files under working directory in coverage report. Useful for discovering holes in test coverage if not all files are imported by the test suite.
cover-inclusive=TRUE

# nose XCoverage
with-xcoverage=TRUE
with-xunit=TRUE
